# gpt-news

./: Cargo.toml
src/: app.rs  main.rs
src/routes/: news.rs
