[package]
name = "gpt-news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version ="0.6.1" }
hyper = { version ="0.14.23", features = ["full"] }
serde = { version="1.0.150", features = ["derive"] }
serde_json = { version = "1.0.89" }
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" } 
